fixes spacing #17

--- a/source/stylesheets/partials/_banner.scss
+++ b/source/stylesheets/partials/_banner.scss
@@ -161,8 +161,8 @@
       padding-top: 6.4rem;
       padding-bottom: 10px;
       padding-bottom: 1rem;
-      font-size: 80px;
-      font-size: 8.6rem;
+      font-size: 100px;
+      font-size: 10.35rem;
       position: relative;
 
       span {
